--- a/RoteiroTuristicoBeja_02/app/src/main/res/layout/my_row.xml
+++ b/RoteiroTuristicoBeja_02/app/src/main/res/layout/my_row.xml
@@ -29,7 +29,7 @@
                 app:srcCompat="@android:drawable/sym_def_app_icon" />
 
             <TextView
-                android:id="@+id/txtText1"
+                android:id="@+id/txtTitle"
                 android:layout_width="210dp"
                 android:layout_height="59dp"
                 android:text="Pontos de interesse"
@@ -43,7 +43,7 @@
                 app:layout_constraintVertical_bias="0.222" />
 
             <TextView
-                android:id="@+id/txtText2"
+                android:id="@+id/txtDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="32dp"
