--- a/RoteiroTuristicoBeja_02/app/src/main/res/layout/my_row.xml
+++ b/RoteiroTuristicoBeja_02/app/src/main/res/layout/my_row.xml
@@ -29,21 +29,18 @@
                 app:srcCompat="@android:drawable/sym_def_app_icon" />
 
             <TextView
-                android:id="@+id/txtTitle"
-                android:layout_width="210dp"
-                android:layout_height="59dp"
+                android:id="@+id/txtViewTitle"
                 android:text="Pontos de interesse"
-                android:textColor="@color/black"
-                android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.728"
                 app:layout_constraintStart_toEndOf="@+id/MyImageView"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.222" />
+                app:layout_constraintVertical_bias="0.222"
+                style="@style/txtTitle" />
 
             <TextView
-                android:id="@+id/txtDescription"
+                android:id="@+id/txtViewDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="32dp"
