--- a/RoteiroTuristicoBeja_02/app/src/main/res/layout/my_row.xml
+++ b/RoteiroTuristicoBeja_02/app/src/main/res/layout/my_row.xml
@@ -30,26 +30,15 @@
 
             <TextView
                 android:id="@+id/txtViewTitle"
+                style="@style/txtTitle"
                 android:text="Pontos de interesse"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.728"
+                app:layout_constraintHorizontal_bias="0.475"
                 app:layout_constraintStart_toEndOf="@+id/MyImageView"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.222"
-                style="@style/txtTitle" />
+                app:layout_constraintVertical_bias="0.506" />
 
-            <TextView
-                android:id="@+id/txtViewDescription"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="32dp"
-                android:text="Description"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.505"
-                app:layout_constraintStart_toEndOf="@+id/MyImageView" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
