--- a/RoteiroTuristicoBeja_02/app/src/main/res/layout/activity_second.xml
+++ b/RoteiroTuristicoBeja_02/app/src/main/res/layout/activity_second.xml
@@ -8,9 +8,9 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="85dp">
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -61,11 +61,11 @@
 
             <ImageView
                 android:id="@+id/imageView2"
-                android:layout_width="252dp"
-                android:layout_height="224dp"
+                android:layout_width="294dp"
+                android:layout_height="251dp"
                 android:layout_marginStart="79dp"
                 android:layout_marginLeft="79dp"
-                android:layout_marginTop="96dp"
+                android:layout_marginTop="56dp"
                 android:layout_marginEnd="80dp"
                 android:layout_marginRight="80dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -73,6 +73,30 @@
                 app:layout_constraintTop_toBottomOf="@+id/description"
                 app:srcCompat="@drawable/google_map" />
 
+            <Button
+                android:id="@+id/launchMap"
+                android:layout_width="142dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="56dp"
+                android:layout_marginLeft="56dp"
+                android:layout_marginBottom="4dp"
+                android:text="ver mapa"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/FabTextSpeak"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="48dp"
+                android:layout_marginRight="48dp"
+                android:clickable="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView2"
+                app:srcCompat="@android:drawable/ic_btn_speak_now" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
