--- a/RoteiroTuristicoBeja_02/app/src/main/res/layout/my_row.xml
+++ b/RoteiroTuristicoBeja_02/app/src/main/res/layout/my_row.xml
@@ -39,6 +39,17 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.506" />
 
+            <CheckBox
+                android:id="@+id/checkBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="156dp"
+                android:layout_marginLeft="156dp"
+                android:layout_marginTop="4dp"
+                android:text="Check"
+                app:layout_constraintStart_toStartOf="@+id/txtViewTitle"
+                app:layout_constraintTop_toBottomOf="@+id/txtViewTitle" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
