--- a/NewRoteiroTuristicoBeja/app/src/main/res/values/themes.xml
+++ b/NewRoteiroTuristicoBeja/app/src/main/res/values/themes.xml
@@ -5,4 +5,8 @@
         <item name="android:navigationBarColor">@color/blue_l</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="ToolbarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">
+        <!-- Customize color of navigation drawer icon and back arrow -->
+        <item name="colorControlNormal">@color/white</item>
+    </style>
 </resources>
