--- a/NewRoteiroTuristicoBeja/app/src/main/res/layout/fragment_monument.xml
+++ b/NewRoteiroTuristicoBeja/app/src/main/res/layout/fragment_monument.xml
@@ -37,12 +37,12 @@
             android:clickable="true"
             android:scaleType="center"
             android:src="@drawable/mic_logo"
-            app:backgroundTint="@color/blue_l"
-            app:tint="@color/white"
+            app:backgroundTint="@color/pink_d"
             app:fabCustomSize="70dp"
             app:layout_constraintBottom_toTopOf="@+id/contLayoutAddCooment"
             app:layout_constraintEnd_toEndOf="parent"
             app:maxImageSize="36dp"
+            app:tint="@color/white"
             tools:ignore="SpeakableTextPresentCheck" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -53,7 +53,7 @@
             android:clickable="true"
             android:scaleType="center"
             android:src="@drawable/map_icon"
-            app:backgroundTint="@color/blue_l"
+            app:backgroundTint="@color/pink_d"
             app:fabCustomSize="70dp"
             app:layout_constraintBottom_toTopOf="@+id/flotBtnTxtSpeek"
             app:layout_constraintEnd_toEndOf="@+id/flotBtnTxtSpeek"
@@ -105,6 +105,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ScrollView
+            android:id="@+id/scrollView"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@+id/contLayoutAddCooment"
@@ -233,8 +234,8 @@
 
                     <TextView
                         android:id="@+id/txtViewMonumentName"
-                        android:layout_width="156dp"
-                        android:layout_height="91dp"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="24dp"
