--- a/NewRoteiroTuristicoBeja/app/src/main/res/layout/main_recyclerview_item.xml
+++ b/NewRoteiroTuristicoBeja/app/src/main/res/layout/main_recyclerview_item.xml
@@ -49,7 +49,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="14dp"
         android:layout_marginBottom="12dp"
-        android:ellipsize="middle"
+        android:ellipsize="end"
         android:gravity="center"
         android:maxLines="2"
         android:text="TextView"
