final final final

--- a/NewRoteiroTuristicoBeja/app/src/main/res/layout/fragment_initial.xml
+++ b/NewRoteiroTuristicoBeja/app/src/main/res/layout/fragment_initial.xml
@@ -20,20 +20,43 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buttonGoMain"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
-        android:background="@drawable/button_round_corners"
-        android:backgroundTint="@color/pink_d"
-        android:paddingLeft="32dp"
-        android:paddingRight="32dp"
-        android:text="Viajar"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        android:textStyle="bold"
+        android:layout_marginBottom="64dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView" />
+        app:layout_constraintStart_toStartOf="@+id/imageView">
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/buttonGoLogIn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="16dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_round_corners"
+            android:backgroundTint="@color/pink_d"
+            android:paddingLeft="32dp"
+            android:paddingRight="32dp"
+            android:text="Entrar"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/buttonGoSignIn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/button_round_corners"
+            android:backgroundTint="@color/pink_d"
+            android:paddingLeft="32dp"
+            android:paddingRight="32dp"
+            android:text="Registar"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
