--- a/NewRoteiroTuristicoBeja/app/src/main/res/layout/comment_list_layout.xml
+++ b/NewRoteiroTuristicoBeja/app/src/main/res/layout/comment_list_layout.xml
@@ -9,20 +9,34 @@
     android:backgroundTint="@color/white">
 
     <TextView
-        android:id="@+id/txtViewComment"
+        android:id="@+id/txtViewUserName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="24dp"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:text="TextView"
+        android:textAlignment="textStart"
+        android:textStyle="bold|italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txtViewComment"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
         android:ellipsize="end"
         android:maxLines="5"
         android:text="TextView"
         android:textSize="19sp"
-        android:textStyle="bold"
+        android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/txtViewUserName"
+        app:layout_constraintTop_toBottomOf="@+id/txtViewUserName" />
 </androidx.constraintlayout.widget.ConstraintLayout>
